option java_package = "org.eligosource.eventsourced.core";
option java_outer_classname = "JournalProtocol";

/**
 * Journal command type. Only used for persistence.
 */
enum CommandType {
  WRITE_IN = 1;
  WRITE_OUT = 2;
  WRITE_ACK = 3;
}

/**
 * Journal command. Only used for persistence.
 */
message CommandProtocol {
  required CommandType commandType = 1;
  optional MessageProtocol message = 2;
  optional int32 processorId = 3;
  optional int32 channelId = 4;
  optional int64 sequenceNr = 5;
}

/**
 * Event message. Used for persistence and remoting.
 */
message MessageProtocol {
  optional bytes event = 2;
  optional bytes eventManifest = 3;
  optional int32 eventSerializerId = 4;
  optional int32 processorId = 6;
  optional int64 sequenceNr = 7;
  optional int64 timestamp = 9;
  optional string senderPath = 8;
}

